# glinet-comet-reverse-gpl

./: .coverage  .dockerignore  .gitignore  .gitmodules  .issue  .scratchpad.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.ADDENDUM  README.md  RELICENSING.md  SECURITY.md  config.env.template  flake.nix  pyproject.toml
.claude/: WORKFLOW.md  settings.local.json.template
.claude/agents/: code-reviewer.md  quick-task.md  session-end-checklist.md  stvhay.md
.claude/scripts/: push-scratchpad-gist.sh
.claude/skills/brainstorming/: SKILL.md
.claude/work/issue-35/: 001-created-offset-manager.txt  002-refactored-scripts.txt  003-tests-passing.txt
.claude/work/issue-82/: 001-scratchpad-simplified.txt
.claude/work/issue-83/: 001-pilot-issue-selected.txt  002-pilot-complete.txt  003-go-decision-approved.txt  004-issue-closed.txt
.claude/work/issue-88/: 001-readme-updated.txt  002-issue-closed.txt
.github/: PULL_REQUEST_TEMPLATE.md  scratchpad.md
.github/ISSUE_TEMPLATE/: analysis.yml  bug.yml  chore.yml  config.yml  documentation.yml  ideation.yml  infrastructure.yml
.github/workflows/: ci.yml  sync-wiki.yml
docs/: CLAUDE-CODE-GUIDE.md  CLAUDE_PERMISSIONS.md  COVERAGE-IMPROVEMENT-PLAN.md  GPL-COMPLIANCE-ANALYSIS.md  IMPLEMENTATION-PLAN.md  ISSUE-WORKFLOW.md  design-jinja-documentation.md  live-status-setup.md  refactoring-plan-2025.md
docs/analysis/: SUMMARY.md  binwalk-scan.md  boot-process.md  build-info.md  device-trees.md  extracted-files.md  flashing-methods.md  gpl-binaries.md  kernel-modules.md  kernel-version.md  kvmd-customizations.md  license-files.md  licenses.md  network-services.md  packages.md  proprietary-blobs.md  uboot-version.md
docs/archive/: PYTHON_STYLE.md  claude-opus-4.5-capabilities.md
docs/costs/: ANTHROPIC-API-PRICING.md
docs/plans/: 2026-03-01-citation-insertion-design.md  2026-03-01-claude-code-guide-design.md  2026-03-01-claude-md-refactoring-design.md  2026-03-01-dockerfile-nix-design.md  2026-03-01-traceability-enforcement-design.md  2026-03-01-traceability-implementation-design.md
docs/quality/: COMPETENCY-MATRIX.md  DEPENDENCY-TRACKING.md  EMBEDDED-WORKFLOW-EXIT-CRITERIA.md  INTERNAL-AUDIT-SCHEDULE.md  LESSONS-LEARNED-2025-12-13-qa-purpose.md  MANAGEMENT-REVIEW-METRICS.md  MANAGEMENT-REVIEW-TEMPLATE.md  NCR-2025-12-13-001-scratchpad-staleness.md  ONBOARDING-PROCESS.md  PILOT-REVIEW-ISSUE-35.md  PROCEDURES.md  QMS-SCOPE.md  QUALITY-OBJECTIVES.md  QUALITY-POLICY.md  RCA-2025-12-13-scratchpad-staleness.md  RISK-REGISTER.md  SCRATCHPAD-FORMAT-SIMPLIFICATION.md  STATUS-UPDATE-MEASUREMENT-METHODOLOGY.md  STATUS-UPDATE-QUALITY-CRITERIA.md  USER-PROFILE-SCHEMA.md
docs/quality/maintainers/: stvhay.md
docs/quality/management-reviews/: 2025-12-baseline-review.md
docs/reference/: gpl-compliance.md  rockchip-boot-chain.md  rockchip-license-info.md  rockchip-secure-boot.md
docs/reports/: iso-9001-gap-analysis-2025-12-12.md
docs/wiki/: Quality-Management-for-AI-Assisted-Projects.md
output/dts/: README.md  rv1126-glinet-rm1.dts
results/: .manifest.toml  binwalk.toml  boot_process.toml  bsp_repos.toml  device_tree_diff.toml  device_trees.toml  network_services.toml  proprietary_blobs.toml  rootfs.toml  secure_boot.toml  test.toml  uboot.toml
scripts/: analysis.py  analyze-binwalk.py  analyze-binwalk.sh  analyze-boot-process.sh  analyze-device-trees.sh  analyze-network-services.sh  analyze-proprietary-blobs.sh  analyze-rootfs.sh  analyze-secure-boot.sh  analyze-uboot.sh  analyze.sh  analyze_binwalk.py  analyze_boot_process.py  analyze_device_tree_diff.py  analyze_device_tree_diff.sh  analyze_device_trees.py  analyze_ghidra.py  analyze_network_services.py  analyze_proprietary_blobs.py  analyze_rootfs.py  analyze_secure_boot.py  analyze_test.sh  analyze_uboot.py  create-status-gist.sh  cross_reference.py  dump-device-trees.sh  dump-kernels.sh  extract-partitions.sh  fetch_upstream.sh  generate-scratchpad.sh  insert_citations.py  quality-check.sh  redact_command_log.py  render-gist.py  render_template.py  render_wiki.sh  test-derivative-dts.sh  test-json-helpers.sh  update-status-gist-loop.sh  update-status-gist.py  (+3 more)
scripts/ghidra/: analyze_binary.py  analyze_kernel_module.py  analyze_uboot_binary.py  reconstruct_structs.py  run_ghidra_analysis.sh
scripts/lib/: analysis_base.py  base_script.py  common.sh  devicetree.py  extraction.py  file_wrapper.py  finders.py  firmware.py  logging.py  offsets.py  output.py  scratchpad_cache.py
templates/: gist-status.md.j2  test.md.j2
templates/wiki/: Device-Tree-Analysis.md.j2  Ghidra-Analysis.md.j2
tests/: README.md  test_analysis.py  test_analysis_base.py  test_analyze_binwalk.py  test_analyze_boot_process.py  test_analyze_device_tree_diff.py  test_analyze_device_trees.py  test_analyze_ghidra.py  test_analyze_network_services.py  test_analyze_proprietary_blobs.py  test_analyze_rootfs.py  test_analyze_secure_boot.py  test_analyze_uboot.py  test_code_quality.py  test_cross_reference.py  test_insert_citations.py  test_lib_devicetree.py  test_lib_extraction.py  test_lib_finders.py  test_lib_firmware.py  test_offsets.py  test_redact_command_log.py  test_render_template.py  test_verify_bsp_repos.py  test_verify_traceability.py
wiki/: Contributing-with-Claude-Code.md  Device-Tree-Analysis.md  Home.md  Usage-Guide.md  _Sidebar.md
