[project]
name = "glinet-comet-reversing"
version = "0.1.0"
description = "GL.iNet Comet (RM1) firmware reverse engineering"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions (better comprehensions)
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # flake8-simplify (simplify code)
    "RET",  # flake8-return (better returns)
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib (prefer pathlib)
    "PL",   # Pylint rules
    "RUF",  # Ruff-specific rules
]

ignore = [
    "PLR0913",  # Too many arguments - sometimes necessary for analysis scripts
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic value comparisons OK in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
