[project]
name = "glinet-comet-reversing"
version = "0.1.0"
description = "GL.iNet Comet (RM1) firmware reverse engineering"
requires-python = ">=3.11"

# Python package dependencies (managed by uv, see uv.lock)
dependencies = [
    "jinja2>=3.1.0",
    "tomlkit>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # ruff and mypy are provided by nix (flake.nix) — they're native binaries,
    # not Python libraries, and pip-installed ELF binaries break in nix containers.
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["scripts/ghidra/"]  # Jython scripts (Python 2.7, Ghidra globals)

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bugs)
    "C4",   # flake8-comprehensions (better comprehensions)
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # flake8-simplify (simplify code)
    "RET",  # flake8-return (better returns)
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib (prefer pathlib)
    "PL",   # Pylint rules
    "RUF",  # Ruff-specific rules
]

ignore = [
    "PLR0913",  # Too many arguments - sometimes necessary for analysis scripts
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic value comparisons OK in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["scripts"]

[[tool.mypy.overrides]]
module = ["tomlkit", "tomlkit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markupsafe", "markupsafe.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/lib/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
